--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Import Google Icon Font -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Import materialize.css -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Calculadora de MacroNutrientes by matalmeida.</title>
   </head>
@@ -9,6 +13,12 @@
     <div id="app">
         <!-- APP GOES HERE  -->
     </div>
+      
+    <!-- Import jQuery before materialize.js -->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    <!-- And then your bundled js -->
+    <!-- <script src="path/to/your/bundle.js"></script> -->
     <script src="client.min.js"></script>
   </body>
 </html>
