--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <!-- Import Google Icon Font -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import materialize.css -->
-    <link href="./styles/materialize.min.css" rel="stylesheet">
+    <link href="styles/materialize.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
     <meta charset="utf-8">
     <title>Calculadora de MacroNutrientes by matalmeida.</title>
