--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link href="styles/materialize.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
     <meta charset="utf-8">
+    <base target="_blank">
     <title>Calculadora de MacroNutrientes by matalmeida.</title>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
