--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <!-- Import Google Icon Font -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import materialize.css -->
-    <link href="styles/materialize.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
     <meta charset="utf-8">
     <base target="_blank">
@@ -25,7 +25,7 @@
     <div id="app">
         <!-- APP GOES HERE  -->
     </div>
-      
+
     <!-- Import jQuery before materialize.js -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
