--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Import Google Icon Font -->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Import materialize.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
-    <meta charset="utf-8">
-    <base target="_blank">
-    <title>Calculadora de Macronutrientes by matalmeida.</title>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-97628827-2', 'auto');
-      ga('send', 'pageview');
+<head>
+  <!-- Import Google Icon Font -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Import materialize.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+  <meta charset="utf-8">
+  <base target="_blank">
+  <title>Calculadora de Macronutrientes by matalmeida.</title>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    </script>
-  </head>
+    ga('create', 'UA-97628827-2', 'auto');
+    ga('send', 'pageview');
 
-  <body>
-    <div id="app">
-        <!-- APP GOES HERE  -->
-    </div>
+  </script>
+</head>
 
-    <!-- Import jQuery before materialize.js -->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    <!-- And then your bundled js -->
-    <!-- <script src="path/to/your/bundle.js"></script> -->
-    <script src="client.min.js"></script>
-  </body>
+<body>
+  <div id="app">
+    <!-- APP GOES HERE  -->
+  </div>
+
+  <!-- Import jQuery before materialize.js -->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+  <!-- And then your bundled js -->
+  <!-- <script src="path/to/your/bundle.js"></script> -->
+  <script src="client.min.js"></script>
+</body>
+
 </html>
